changed the background color, moved the elements, and implemented a scroll function that will have a smooth transition when scrolling through is .is() page

--- a/webpage.html
+++ b/webpage.html
@@ -1,20 +1,30 @@
 <html>
     <link href="webpage_style.css" type="text/css" rel="stylesheet">
-</html>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,400i,700,700i|Montserrat:700" rel="stylesheet">
+
+
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mika.is()</title>
-
-    <div class="container">
-        <a href="is.html">.is()</a></li>
-        <a href="projects.html">.projects()</a></li>
-        <a href="about.html">.about()</a></li>
-        <a href="contact.html">.contact()</a></li>
-    </div>
-
-    <div class ="home">
-        <h1>mika.is()</h1>
 
 </head>
 <body>
 
+    <div class="container">
+        <a href="webpage.html">.is()</a></li>
+        <a href="projects.html">.projects()</a></li>
+        <a href="about.html">.about()</a></li>
+        <a href="contact.html">.contact()</a></li>
+        <a href="www.linkedin.com/in/mikael-celik-3401072b8" target="_blank"> <img src="linkedin.png" alt="linkedin logo"></a>
+    </div>
+    <div class="main">
+        <div class="fade-in-section">Hello, I'm Mikael Celik and this is a bit about me.</div>
+        <div class="fade-in-section">Here's more about my projects and interests.</div>
+        <div class="fade-in-section">Feel free to contact me below.</div>
+    </div>
+
+    <script src="webpage.js"></script>
 </body>
+
+</html>
